<?xml version="1.0"?>
<package format="3">
  <name>implementation</name>
  <version>0.0.1</version>
  <description>Testing or integration with usb_can_node</description>

  <maintainer email="arkaghosh0115@gmail.com">Arka Ghosh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>usb_can_node</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
