<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usb_can_node</name>
  <version>0.0.0</version>
  <description>ros2 waveshare usb-can-b bridge</description>
  <maintainer email="arkaghosh0115@gmail.com">Arka Ghosh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <library name="usb_can_utils"/>
  </export>

</package>
